--- a/keepalived/etc/keepalived/keepalived.conf
+++ b/keepalived/etc/keepalived/keepalived.conf
@@ -52,7 +52,7 @@ virtual_server 192.168.200.100 443 {
               digest 9b3a0c85a887a256d6939da88aabd8cd
             }
             connect_timeout 3
-            nb_get_retry 3
+            retry 3
             delay_before_retry 3
         }
     }
@@ -60,7 +60,7 @@ virtual_server 192.168.200.100 443 {
 
 virtual_server 10.10.10.2 1358 {
     delay_loop 6
-    lb_algo rr 
+    lb_algo rr
     lb_kind NAT
     persistence_timeout 50
     protocol TCP
@@ -70,20 +70,20 @@ virtual_server 10.10.10.2 1358 {
     real_server 192.168.200.2 1358 {
         weight 1
         HTTP_GET {
-            url { 
+            url {
               path /testurl/test.jsp
               digest 640205b7b0fc66c1ea91c463fac6334d
             }
-            url { 
+            url {
               path /testurl2/test.jsp
               digest 640205b7b0fc66c1ea91c463fac6334d
             }
-            url { 
+            url {
               path /testurl3/test.jsp
               digest 640205b7b0fc66c1ea91c463fac6334d
             }
             connect_timeout 3
-            nb_get_retry 3
+            retry 3
             delay_before_retry 3
         }
     }
@@ -91,16 +91,16 @@ virtual_server 10.10.10.2 1358 {
     real_server 192.168.200.3 1358 {
         weight 1
         HTTP_GET {
-            url { 
+            url {
               path /testurl/test.jsp
               digest 640205b7b0fc66c1ea91c463fac6334c
             }
-            url { 
+            url {
               path /testurl2/test.jsp
               digest 640205b7b0fc66c1ea91c463fac6334c
             }
             connect_timeout 3
-            nb_get_retry 3
+            retry 3
             delay_before_retry 3
         }
     }
@@ -108,7 +108,7 @@ virtual_server 10.10.10.2 1358 {
 
 virtual_server 10.10.10.3 1358 {
     delay_loop 3
-    lb_algo rr 
+    lb_algo rr
     lb_kind NAT
     persistence_timeout 50
     protocol TCP
@@ -116,20 +116,20 @@ virtual_server 10.10.10.3 1358 {
     real_server 192.168.200.4 1358 {
         weight 1
         HTTP_GET {
-            url { 
+            url {
               path /testurl/test.jsp
               digest 640205b7b0fc66c1ea91c463fac6334d
             }
-            url { 
+            url {
               path /testurl2/test.jsp
               digest 640205b7b0fc66c1ea91c463fac6334d
             }
-            url { 
+            url {
               path /testurl3/test.jsp
               digest 640205b7b0fc66c1ea91c463fac6334d
             }
             connect_timeout 3
-            nb_get_retry 3
+            retry 3
             delay_before_retry 3
         }
     }
@@ -137,20 +137,20 @@ virtual_server 10.10.10.3 1358 {
     real_server 192.168.200.5 1358 {
         weight 1
         HTTP_GET {
-            url { 
+            url {
               path /testurl/test.jsp
               digest 640205b7b0fc66c1ea91c463fac6334d
             }
-            url { 
+            url {
               path /testurl2/test.jsp
               digest 640205b7b0fc66c1ea91c463fac6334d
             }
-            url { 
+            url {
               path /testurl3/test.jsp
               digest 640205b7b0fc66c1ea91c463fac6334d
             }
             connect_timeout 3
-            nb_get_retry 3
+            retry 3
             delay_before_retry 3
         }
     }
