--- a/Makefile.in
+++ b/Makefile.in
@@ -260,6 +260,7 @@ EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 GENHASH_LIBS = @GENHASH_LIBS@
 GREP = @GREP@
+HAVE_RPMBUILD = @HAVE_RPMBUILD@
 HAVE_SPHINX_BUILD = @HAVE_SPHINX_BUILD@
 INSTALL = @INSTALL@
 INSTALL_DATA = @INSTALL_DATA@
@@ -883,7 +884,10 @@ clean-local-snap:
 tarball: dist
 
 rpm:
-	rpmbuild -ba --build-in-place keepalived.spec
+@RPM_BIP_TRUE@	rpmbuild -ba --build-in-place keepalived.spec
+@RPM_BIP_FALSE@	@$(MAKE) dist
+@RPM_BIP_FALSE@	@cp -p keepalived-$(VERSION).tar.gz `rpm --eval "%{_sourcedir}"`
+@RPM_BIP_FALSE@	rpmbuild -ba keepalived.spec
 
 debug:
 	@$(MAKE) DEBUG_LDFLAGS=-ggdb
