--- a/keepalived/vrrp/Makefile.am
+++ b/keepalived/vrrp/Makefile.am
@@ -18,8 +18,8 @@ libvrrp_a_SOURCES	= \
 	vrrp_daemon.c vrrp_print.c vrrp_data.c vrrp_parser.c \
 	vrrp.c vrrp_notify.c vrrp_scheduler.c vrrp_sync.c vrrp_index.c \
 	vrrp_arp.c vrrp_if.c vrrp_track.c vrrp_ipaddress.c \
-	vrrp_ndisc.c vrrp_if_config.c
-libvrrp_a_SOURCES += ../include/vrrp_daemon.h
+	vrrp_ndisc.c vrrp_if_config.c vrrp_static_track.c
+libvrrp_a_SOURCES	+= ../include/vrrp_daemon.h
 
 libvrrp_a_LIBADD	=
 EXTRA_libvrrp_a_SOURCES	=
