--- a/debian/rules
+++ b/debian/rules
@@ -7,7 +7,7 @@
 	dh  $@ --with autoreconf --with=systemd
 
 override_dh_auto_configure:
-	dh_auto_configure -- --with-kernel-dir=/usr/src/linux-headers-$$(uname -r)  --enable-snmp --enable-sha1 --enable-snmp-rfcv2 --enable-snmp-rfcv3
+	dh_auto_configure -- --enable-snmp --enable-sha1 --enable-snmp-rfcv2 --enable-snmp-rfcv3
 
 
 override_dh_auto_install:
