--- a/keepalived.spec.in
+++ b/keepalived.spec.in
@@ -14,7 +14,7 @@ BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root
 
 BuildRequires: openssl-devel
 # We need both of these for proper LVS support
-BuildRequires: kernel, kernel-devel
+BuildRequires: kernel-headers
 BuildRequires: libnfnetlink-devel
 BuildRequires: autoconf automake pkgconfig
 @SNMP_TRUE@BuildRequires: net-snmp-devel
@@ -75,15 +75,15 @@ CONFIG_OPTS=
 @SNMP_REPLY_V3_FOR_V2_FALSE@CONFIG_OPTS="$CONFIG_OPTS --disable-snmp-reply-v3-for-v2"
 @WITH_SHA1_TRUE@CONFIG_OPTS="$CONFIG_OPTS --enable-sha1"
 @WITH_DBUS_TRUE@CONFIG_OPTS="$CONFIG_OPTS --enable-dbus"
+@INIT_UPSTART_TRUE@CONFIG_OPTS="$CONFIG_OPTS --with-init=upstart"
 @INIT_SYSTEMD_TRUE@CONFIG_OPTS="$CONFIG_OPTS --with-init=systemd"
+@INIT_SYSV_TRUE@CONFIG_OPTS="$CONFIG_OPTS --with-init=SYSV"
+@INIT_SUSE_TRUE@CONFIG_OPTS="$CONFIG_OPTS --with-init=SUSE"
+@INIT_OPENRC_TRUE@CONFIG_OPTS="$CONFIG_OPTS --with-init=openrc"
 @WITH_REGEX_TRUE@CONFIG_OPTS="$CONFIG_OPTS --enable-regex"
-%{?el3:export CPPFLAGS="-I/usr/kerberos/include"}
-%{?rh9:export CPPFLAGS="-I/usr/kerberos/include"}
+@WITH_BFD_TRUE@CONFIG_OPTS="$CONFIG_OPTS --enable-bfd"
 autoreconf -f -i
-%configure $CONFIG_OPTS \
-%{?el3:--includedir="/usr/kerberos/include"} \
-%{?rh9:--includedir="/usr/kerberos/include"} \
-    --with-kernel-dir="/lib/modules/%{kernel}/build"
+%configure $CONFIG_OPTS
 %{__make} %{?_smp_mflags} STRIP=/bin/true
 
 
