--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -15,19 +15,17 @@ apps:
     command: bin/keepalived-wrapper
   keepalived:
     command: bin/keepalived-wrapper
-  "500":
+  "503":        # Ubuntu 19.10 and Fedora 31
+    command: usr/sbin/keepalived-503
+  "500":        # Ubuntu 19.04 and Fedora 30
     command: usr/sbin/keepalived-500
-  "418":
+  "418":        # Ubuntu 18.10 and RHEL 8 and Fedora 29
     command: usr/sbin/keepalived-418
-  "415":
+  "415":        # Ubuntu 18.04
     command: usr/sbin/keepalived-415
-#  "413":
-#    command: usr/sbin/keepalived-413
-  "404":
+  "404":        # Ubuntu 16.04
     command: usr/sbin/keepalived-404
-  "313":
-    command: usr/sbin/keepalived-313
-  "310":
+  "310":        # RHEL 7
     command: usr/sbin/keepalived-310
   genhash:
     command: usr/bin/genhash
@@ -50,6 +48,8 @@ parts:
       snapcraftctl build
       VER=$(grep GIT_COMMIT lib/git-commit.h | cut -d'"' -f2)
       snapcraftctl set-version $VER
+      echo -n "Build kernel:"
+      printf " %d.%d.%d\n" $(printf "%6.6x" $(grep LINUX_VERSION_CODE /usr/include/linux/version.h | sed -e "s/.*CODE //") | sed -e "s/\(..\)\(..\)/0x\1 0x\2 0x/")
     build-packages:
       - iptables-dev
       - libipset-dev
@@ -79,7 +79,7 @@ parts:
     organize:
       'usr/sbin/keepalived': usr/sbin/keepalived-404
 
-  linux-headers-500:
+  linux-headers-503:
     plugin: nil
     build-packages:
       - dpkg
@@ -87,6 +87,70 @@ parts:
       - wget
     after:
       - keepalived
+    override-pull: |
+      KERNEL_VER="5.3.0"
+      ARCH=$(dpkg-architecture -q DEB_BUILD_ARCH)
+      if [ $ARCH = amd64 ] || [ $ARCH = i386 ]; then
+        ARCHIVE_URL="http://security.ubuntu.com/ubuntu/pool/main/l/linux/"
+      else
+        ARCHIVE_URL="http://ports.ubuntu.com/pool/main/l/linux/"
+      fi
+      DEB_SUFFIX=$(wget ${ARCHIVE_URL} -O - | grep linux-libc-dev | cut -d'_' -f2-3 | cut -d'"' -f1 | grep ${ARCH} | grep ${KERNEL_VER} | tail -n1)
+      wget --quiet ${ARCHIVE_URL}/linux-libc-dev_${DEB_SUFFIX} -O ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb
+      echo -n "Unpacking kernel headers..."
+      dpkg -x ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb ${SNAPCRAFT_PART_INSTALL}
+      printf " %d.%d.%d\n" $(printf "%6.6x" $(grep LINUX_VERSION_CODE ${SNAPCRAFT_PART_INSTALL}/usr/include/linux/version.h | sed -e "s/.*CODE //") | sed -e "s/\(..\)\(..\)/0x\1 0x\2 0x/")
+      rm -f ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb
+    override-build: |
+      snapcraftctl build
+      # Move the headers on the host out of the way
+      rm -rf /usr/include/linux || true
+      # Move header from the part to the host
+      mv ${SNAPCRAFT_PART_INSTALL}/usr/include/linux /usr/include/ || true
+      echo -n "Build kernel:"
+      printf " %d.%d.%d\n" $(printf "%6.6x" $(grep LINUX_VERSION_CODE /usr/include/linux/version.h | sed -e "s/.*CODE //") | sed -e "s/\(..\)\(..\)/0x\1 0x\2 0x/")
+    stage:
+      - -*
+    prime:
+      - -*
+
+  keepalived-503:
+    plugin: autotools
+    source: .
+    source-type: git
+    after:
+      - linux-headers-503
+    configflags:
+      - --prefix=/usr
+      - --enable-bfd
+      - --enable-dbus
+      - --enable-json
+      - --enable-regex
+      - --enable-snmp
+      - --enable-snmp-rfc
+      - --disable-libipset-dynamic
+    organize:
+      'usr/sbin/keepalived': usr/sbin/keepalived-503
+      'usr/etc/dbus-1/system.d/org.keepalived.Vrrp1.conf': etc/dbus-1/system.d/org.keepalived.Vrrp1.conf
+    stage:
+      - usr/sbin/keepalived-503
+      - etc/dbus-1/system.d/org.keepalived.Vrrp1.conf
+      - usr/share/dbus-1/interfaces/org.keepalived.Vrrp1.Instance.xml
+      - usr/share/dbus-1/interfaces/org.keepalived.Vrrp1.Vrrp.xml
+    prime:
+      - usr/sbin/keepalived-503
+      - etc/dbus-1/system.d/org.keepalived.Vrrp1.conf
+      - usr/share/dbus-1/interfaces/org.keepalived.Vrrp1.Instance.xml
+      - usr/share/dbus-1/interfaces/org.keepalived.Vrrp1.Vrrp.xml
+
+  linux-headers-500:
+    plugin: nil
+    build-packages:
+      - dpkg
+      - dpkg-dev
+      - wget
+    after:
+      - keepalived-503
     override-pull: |
       KERNEL_VER="5.0.0"
       ARCH=$(dpkg-architecture -q DEB_BUILD_ARCH)
@@ -97,20 +161,18 @@ parts:
       fi
       DEB_SUFFIX=$(wget ${ARCHIVE_URL} -O - | grep linux-libc-dev | cut -d'_' -f2-3 | cut -d'"' -f1 | grep ${ARCH} | grep ${KERNEL_VER} | tail -n1)
       wget --quiet ${ARCHIVE_URL}/linux-libc-dev_${DEB_SUFFIX} -O ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb
-      echo "Unpacking kernel headers..."
+      echo -n "Unpacking kernel headers..."
       dpkg -x ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb ${SNAPCRAFT_PART_INSTALL}
-      cat ${SNAPCRAFT_PART_INSTALL}/usr/include/linux/version.h
+      printf " %d.%d.%d\n" $(printf "%6.6x" $(grep LINUX_VERSION_CODE ${SNAPCRAFT_PART_INSTALL}/usr/include/linux/version.h | sed -e "s/.*CODE //") | sed -e "s/\(..\)\(..\)/0x\1 0x\2 0x/")
       rm -f ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb
     override-build: |
       snapcraftctl build
       # Move the headers on the host out of the way
-      echo -n "Host kernel:"
-      cat /usr/include/linux/version.h
       rm -rf /usr/include/linux || true
       # Move header from the part to the host
       mv ${SNAPCRAFT_PART_INSTALL}/usr/include/linux /usr/include/ || true
       echo -n "Build kernel:"
-      cat /usr/include/linux/version.h
+      printf " %d.%d.%d\n" $(printf "%6.6x" $(grep LINUX_VERSION_CODE /usr/include/linux/version.h | sed -e "s/.*CODE //") | sed -e "s/\(..\)\(..\)/0x\1 0x\2 0x/")
     stage:
       - -*
     prime:
@@ -133,10 +195,17 @@ parts:
       - --disable-libipset-dynamic
     organize:
       'usr/sbin/keepalived': usr/sbin/keepalived-500
+      'usr/etc/dbus-1/system.d/org.keepalived.Vrrp1.conf': etc/dbus-1/system.d/org.keepalived.Vrrp1.conf
     stage:
       - usr/sbin/keepalived-500
+      - etc/dbus-1/system.d/org.keepalived.Vrrp1.conf
+      - usr/share/dbus-1/interfaces/org.keepalived.Vrrp1.Instance.xml
+      - usr/share/dbus-1/interfaces/org.keepalived.Vrrp1.Vrrp.xml
     prime:
       - usr/sbin/keepalived-500
+      - etc/dbus-1/system.d/org.keepalived.Vrrp1.conf
+      - usr/share/dbus-1/interfaces/org.keepalived.Vrrp1.Instance.xml
+      - usr/share/dbus-1/interfaces/org.keepalived.Vrrp1.Vrrp.xml
 
   linux-headers-418:
     plugin: nil
@@ -156,20 +225,18 @@ parts:
       fi
       DEB_SUFFIX=$(wget ${ARCHIVE_URL} -O - | grep linux-libc-dev | cut -d'_' -f2-3 | cut -d'"' -f1 | grep ${ARCH} | grep ${KERNEL_VER} | tail -n1)
       wget --quiet ${ARCHIVE_URL}/linux-libc-dev_${DEB_SUFFIX} -O ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb
-      echo "Unpacking kernel headers..."
+      echo -n "Unpacking kernel headers..."
       dpkg -x ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb ${SNAPCRAFT_PART_INSTALL}
-      cat ${SNAPCRAFT_PART_INSTALL}/usr/include/linux/version.h
+      printf " %d.%d.%d\n" $(printf "%6.6x" $(grep LINUX_VERSION_CODE ${SNAPCRAFT_PART_INSTALL}/usr/include/linux/version.h | sed -e "s/.*CODE //") | sed -e "s/\(..\)\(..\)/0x\1 0x\2 0x/")
       rm -f ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb
     override-build: |
       snapcraftctl build
       # Move the headers on the host out of the way
-      echo -n "Host kernel:"
-      cat /usr/include/linux/version.h
       rm -rf /usr/include/linux || true
       # Move header from the part to the host
       mv ${SNAPCRAFT_PART_INSTALL}/usr/include/linux /usr/include/ || true
       echo -n "Build kernel:"
-      cat /usr/include/linux/version.h
+      printf " %d.%d.%d\n" $(printf "%6.6x" $(grep LINUX_VERSION_CODE /usr/include/linux/version.h | sed -e "s/.*CODE //") | sed -e "s/\(..\)\(..\)/0x\1 0x\2 0x/")
     stage:
       - -*
     prime:
@@ -215,20 +282,18 @@ parts:
       fi
       DEB_SUFFIX=$(wget ${ARCHIVE_URL} -O - | grep linux-libc-dev | cut -d'_' -f2-3 | cut -d'"' -f1 | grep ${ARCH} | grep ${KERNEL_VER} | tail -n1)
       wget --quiet ${ARCHIVE_URL}/linux-libc-dev_${DEB_SUFFIX} -O ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb
-      echo "Unpacking kernel headers..."
+      echo -n "Unpacking kernel headers..."
       dpkg -x ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb ${SNAPCRAFT_PART_INSTALL}
-      cat ${SNAPCRAFT_PART_INSTALL}/usr/include/linux/version.h
+      printf " %d.%d.%d\n" $(printf "%6.6x" $(grep LINUX_VERSION_CODE ${SNAPCRAFT_PART_INSTALL}/usr/include/linux/version.h | sed -e "s/.*CODE //") | sed -e "s/\(..\)\(..\)/0x\1 0x\2 0x/")
       rm -f ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb
     override-build: |
       snapcraftctl build
       # Move the headers on the host out of the way
-      echo -n "Host kernel:"
-      cat /usr/include/linux/version.h
       rm -rf /usr/include/linux || true
       # Move header from the part to the host
       mv ${SNAPCRAFT_PART_INSTALL}/usr/include/linux /usr/include/ || true
       echo -n "Build kernel:"
-      cat /usr/include/linux/version.h
+      printf " %d.%d.%d\n" $(printf "%6.6x" $(grep LINUX_VERSION_CODE /usr/include/linux/version.h | sed -e "s/.*CODE //") | sed -e "s/\(..\)\(..\)/0x\1 0x\2 0x/")
     stage:
       - -*
     prime:
@@ -256,121 +321,6 @@ parts:
     prime:
       - usr/sbin/keepalived-415
 
-  # linux-headers-413:
-  #   plugin: nil
-  #   build-packages:
-  #     - dpkg
-  #     - dpkg-dev
-  #     - wget
-  #   after:
-  #     - keepalived-415
-  #   override-pull: |
-  #     KERNEL_VER="4.13.0"
-  #     ARCH=$(dpkg-architecture -q DEB_BUILD_ARCH)
-  #     ARCHIVE_URL="http://old-releases.ubuntu.com/ubuntu/pool/main/l/linux/"
-  #     DEB_SUFFIX=$(wget ${ARCHIVE_URL} -O - | grep linux-libc-dev | cut -d'_' -f2-3 | cut -d'"' -f1 | grep ${ARCH} | grep ${KERNEL_VER} | tail -n1)
-  #     wget --quiet ${ARCHIVE_URL}/linux-libc-dev_${DEB_SUFFIX} -O ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb
-  #     echo "Unpacking kernel headers..."
-  #     dpkg -x ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb ${SNAPCRAFT_PART_INSTALL}
-  #     cat ${SNAPCRAFT_PART_INSTALL}/usr/include/linux/version.h
-  #     rm -f ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb
-  #   override-build: |
-  #     snapcraftctl build
-  #     # Move the headers on the host out of the way
-  #     echo -n "Host kernel:"
-  #     cat /usr/include/linux/version.h
-  #     rm -rf /usr/include/linux || true
-  #     # Move header from the part to the host
-  #     mv ${SNAPCRAFT_PART_INSTALL}/usr/include/linux /usr/include/ || true
-  #     echo -n "Build kernel:"
-  #     cat /usr/include/linux/version.h
-  #   stage:
-  #     - -*
-  #   prime:
-  #     - -*
-
-  # keepalived-413:
-  #   plugin: autotools
-  #   source: .
-  #   source-type: git
-  #   after:
-  #     - linux-headers-413
-  #   configflags:
-  #     - --prefix=/usr
-  #     - --enable-bfd
-  #     - --enable-dbus
-  #     - --enable-json
-  #     - --enable-regex
-  #     - --enable-snmp
-  #     - --enable-snmp-rfc
-  #     - --disable-libipset-dynamic
-  #   organize:
-  #     'usr/sbin/keepalived': usr/sbin/keepalived-413
-  #   stage:
-  #     - usr/sbin/keepalived-413
-  #   prime:
-  #     - usr/sbin/keepalived-413
-
-  linux-headers-313:
-    plugin: nil
-    build-packages:
-      - dpkg
-      - dpkg-dev
-      - wget
-    after:
-      - keepalived-415
-#     - keepalived-413
-    override-pull: |
-      KERNEL_VER="3.13.0"
-      ARCH=$(dpkg-architecture -q DEB_BUILD_ARCH)
-      if [ $ARCH = amd64 ] || [ $ARCH = i386 ]; then
-        ARCHIVE_URL="http://security.ubuntu.com/ubuntu/pool/main/l/linux/"
-      else
-        ARCHIVE_URL="http://ports.ubuntu.com/pool/main/l/linux/"
-      fi
-      DEB_SUFFIX=$(wget ${ARCHIVE_URL} -O - | grep linux-libc-dev | cut -d'_' -f2-3 | cut -d'"' -f1 | grep ${ARCH} | grep ${KERNEL_VER} | tail -n1)
-      wget --quiet ${ARCHIVE_URL}/linux-libc-dev_${DEB_SUFFIX} -O ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb
-      echo "Unpacking kernel headers..."
-      dpkg -x ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb ${SNAPCRAFT_PART_INSTALL}
-      cat ${SNAPCRAFT_PART_INSTALL}/usr/include/linux/version.h
-      rm -f ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb
-    override-build: |
-      snapcraftctl build
-      # Move the headers on the host out of the way
-      echo -n "Host kernel:"
-      cat /usr/include/linux/version.h
-      rm -rf /usr/include/linux || true
-      # Move header from the part to the host
-      mv ${SNAPCRAFT_PART_INSTALL}/usr/include/linux /usr/include/ || true
-      echo -n "Build kernel:"
-      cat /usr/include/linux/version.h
-    stage:
-      - -*
-    prime:
-      - -*
-
-  keepalived-313:
-    plugin: autotools
-    source: .
-    source-type: git
-    after:
-      - linux-headers-313
-    configflags:
-      - --prefix=/usr
-      - --enable-bfd
-      - --enable-dbus
-      - --enable-json
-      - --enable-regex
-      - --enable-snmp
-      - --enable-snmp-rfc
-      - --disable-libipset-dynamic
-    organize:
-      'usr/sbin/keepalived': usr/sbin/keepalived-313
-    stage:
-      - usr/sbin/keepalived-313
-    prime:
-      - usr/sbin/keepalived-313
-
   linux-headers-310:
     plugin: nil
     build-packages:
@@ -378,7 +328,7 @@ parts:
       - dpkg-dev
       - wget
     after:
-      - keepalived-313
+      - keepalived-415
     override-pull: |
       ARCH=$(dpkg-architecture -q DEB_BUILD_ARCH)
       if [ $ARCH = amd64 ] || [ $ARCH = ppc64el ] ||  [ $ARCH = arm64 ]; then
@@ -388,21 +338,26 @@ parts:
       elif [ $ARCH = armhf ]; then
         DEB_URL="http://launchpadlibrarian.net/144753483/linux-libc-dev_3.10.0-2.11_armhf.deb"
       fi
-      wget --quiet ${DEB_URL} -O ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb
-      echo "Unpacking kernel headers..."
-      dpkg -x ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb ${SNAPCRAFT_PART_INSTALL}
-      cat ${SNAPCRAFT_PART_INSTALL}/usr/include/linux/version.h
-      rm -f ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb
+      if [ $ARCH != s390x ]; then
+        # s390x was not supported on Trusty, so there are no kernel headers for it.
+        # Just let it build with the previous headers.
+        wget --quiet ${DEB_URL} -O ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb
+        echo -n "Unpacking kernel headers..."
+        dpkg -x ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb ${SNAPCRAFT_PART_INSTALL}
+        printf " %d.%d.%d\n" $(printf "%6.6x" $(grep LINUX_VERSION_CODE ${SNAPCRAFT_PART_INSTALL}/usr/include/linux/version.h | sed -e "s/.*CODE //") | sed -e "s/\(..\)\(..\)/0x\1 0x\2 0x/")
+        rm -f ${SNAPCRAFT_PART_INSTALL}/linux-libc-dev.deb
+      fi
     override-build: |
       snapcraftctl build
       # Move the headers on the host out of the way
-      echo -n "Host kernel:"
-      cat /usr/include/linux/version.h
-      rm -rf /usr/include/linux || true
-      # Move header from the part to the host
-      mv ${SNAPCRAFT_PART_INSTALL}/usr/include/linux /usr/include/ || true
+      ARCH=$(dpkg-architecture -q DEB_BUILD_ARCH)
+      if [ $ARCH != s390x ]; then
+        rm -rf /usr/include/linux || true
+        # Move header from the part to the host
+        mv ${SNAPCRAFT_PART_INSTALL}/usr/include/linux /usr/include/ || true
+      fi
       echo -n "Build kernel:"
-      cat /usr/include/linux/version.h
+      printf " %d.%d.%d\n" $(printf "%6.6x" $(grep LINUX_VERSION_CODE /usr/include/linux/version.h | sed -e "s/.*CODE //") | sed -e "s/\(..\)\(..\)/0x\1 0x\2 0x/")
     stage:
       - -*
     prime:
