Add libnftnl-dev to Build-Depends

--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,7 @@ Build-Depends: autoconf,
                libnfnetlink-dev,
                libipset-dev,
                iptables-dev,
+               libnftnl-dev,
                linux-libc-dev,
                libsystemd-dev,
                linux-headers-generic,
