--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -64,6 +64,9 @@ parts:
     override-build: |
       snapcraftctl build
       VER=$(grep GIT_COMMIT lib/git-commit.h | cut -d'"' -f2)
+      if [ -z $VER ]; then
+        VER=`grep "^AC_INIT" configure.ac | tr '[' ']' | cut -d']' -f4`
+      fi
       snapcraftctl set-version $VER
       echo -n "Build kernel:"
       printf " %d.%d.%d\n" $(printf "%6.6x" $(grep LINUX_VERSION_CODE /usr/include/linux/version.h | sed -e "s/.*CODE //") | sed -e "s/\(..\)\(..\)/0x\1 0x\2 0x/")
