Update debian directories based on keepalived 2.2.4 in jammy

--- a/debian/control
+++ b/debian/control
@@ -5,17 +5,19 @@ Maintainer: Hiroaki Nakamura <hnakamur@gmail.com>
 Build-Depends: autoconf,
                debhelper-compat (=12),
                libglib2.0-dev,
+               libip4tc-dev,
+               libipset-dev,
                libjson-c-dev,
+               libnfnetlink-dev,
+               libnftnl-dev,
                libnl-3-dev,
                libnl-genl-3-dev,
+               libnl-nf-3-dev,
+               libpcre2-dev,
                libpopt-dev,
                libsnmp-dev,
                libssl-dev,
-               libnl-nf-3-dev,
-               libnfnetlink-dev,
-	       libnftnl-dev,
-               libipset-dev,
-	       libip4tc-dev,
+               libsystemd-dev,
                linux-libc-dev,
                pkg-config
 Standards-Version: 4.4.1
