--- a/debian/keepalived.service
+++ b/debian/keepalived.service
@@ -6,7 +6,7 @@ Wants=network-online.target
 ConditionFileNotEmpty=/etc/keepalived/keepalived.conf
 
 [Service]
-Type=simple
+Type=notify
 # Read configuration variable file if it is present
 EnvironmentFile=-/etc/default/keepalived
 ExecStart=/usr/sbin/keepalived --dont-fork $DAEMON_ARGS
